tests/compile_fail/v3_mut_keyword_removed.iron
func check_value(mut x: Int) -> Int {
    x = x + 1
    return x
}
